@@ -21,6 +21,7 @@ META.yml
 README
 SIGNATURE
 t/modules/Ex1.pm
+t/modules/Ex11.pm
 t/modules/Ex2.pm
 t/modules/Ex3.pm
 t/modules/Ex4.pm
